@@ -1,3 +1,8 @@
+2006-04-21  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_addPrinterOptionDefault): Support
+	lists as values.
+
 2006-04-19  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile: Version 1.9.8.
